force-app/main/default/objects/Visa_Insurance_POE__c/Visa_Insurance_POE__c.object-meta.xml
<CustomObject>
    <label>Visa &amp; Insurance</label>
    <nameField>
        <displayFormat>VI-{00000000}</displayFormat>
        <label>Visa &amp; Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visa &amp; Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>