force-app/main/default/objects/Visa_Insurance_POE__c/fields/Additional_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone__c</fullName>
    <label>Additional Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>