force-app/main/default/objects/Visa_Insurance_POE__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>