force-app/main/default/objects/Visa_Insurance_POE__c/fields/Commission_amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_amount__c</fullName>
    <formula>Insurance_Sale_Price__c *  Commission_Manual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>