force-app/main/default/objects/Visa_Insurance_POE__c/fields/Consulate_Fees__c.field-meta.xml
<CustomField>
    <fullName>Consulate_Fees__c</fullName>
    <formula>Quantity__c *  Visa__r.Consulate_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulate Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>