force-app/main/default/objects/Visa_Insurance_POE__c/fields/Courier_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Courier_Service_Price__c</fullName>
    <formula>Quantity_Courier__c *  Courier__r.Courier_Service_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Courier Service Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>