force-app/main/default/objects/Visa_Insurance_POE__c/fields/Courier_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Courier_Service_Type__c</fullName>
    <label>Courier Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Way</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>