force-app/main/default/objects/Visa_Insurance_POE__c/fields/Courier_Total__c.field-meta.xml
<CustomField>
    <fullName>Courier_Total__c</fullName>
    <formula>Courier_Service_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Courier Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>