force-app/main/default/objects/Visa_Insurance_POE__c/fields/Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Cover_Type__c</fullName>
    <label>Cover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Basics</fullName>
                <isActive>false</isActive>
                <label>Basics</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <isActive>false</isActive>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Essentials</fullName>
                <isActive>false</isActive>
                <label>Essentials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>