force-app/main/default/objects/Visa_Insurance_POE__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>Quantity__c *  Visa__r.GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>