force-app/main/default/objects/Visa_Insurance_POE__c/fields/GST_Courier__c.field-meta.xml
<CustomField>
    <fullName>GST_Courier__c</fullName>
    <formula>Quantity_Courier__c *  Courier__r.GST_COURIER__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>