force-app/main/default/objects/Visa_Insurance_POE__c/fields/Insurance_Nett_Price__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Nett_Price__c</fullName>
    <formula>Insurance_Sale_Price__c - ( Insurance_Sale_Price__c  *  Commission_Manual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Nett Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>