force-app/main/default/objects/Visa_Insurance_POE__c/fields/Insurance_Policy_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Date__c</fullName>
    <description>This date populates from workflow - when Insurance Status = Policy time stamps the date</description>
    <inlineHelpText>Autocalc - when Insurance Status = Policy, time stamped</inlineHelpText>
    <label>Insurance Policy Date</label>
    <type>Date</type>
</CustomField>