force-app/main/default/objects/Visa_Insurance_POE__c/fields/Insurance_Region__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Region__c</fullName>
    <label>Insurance Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>USA Americas</fullName>
            </value>
            <value>
                <fullName>Australia/Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>