force-app/main/default/objects/Visa_Insurance_POE__c/fields/Insurance_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Sale_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insurance Total (TAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>