force-app/main/default/objects/Visa_Insurance_POE__c/fields/Insurance_Total_External__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Total_External__c</fullName>
    <label>Insurance Total (External)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>