force-app/main/default/objects/Visa_Insurance_POE__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAD Insurance</fullName>
            </value>
            <value>
                <fullName>NZ Insurance</fullName>
            </value>
            <value>
                <fullName>MyTravel Insurance</fullName>
                <isActive>false</isActive>
                <label>MyTravel Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>