force-app/main/default/objects/Visa_Insurance_POE__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <label>Order Line Item</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>Visa &amp; Insurance</relationshipLabel>
    <relationshipName>Visa_Insurance_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>