force-app/main/default/objects/Visa_Insurance_POE__c/fields/ordexp_passenger_name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_passenger_name__c</fullName>
    <formula>Passenger__r.ordexp_PAX_Nickname__c +&apos; | &apos;+Passenger__r.first_name__c + &apos; &apos; + Passenger__r.last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Name</label>
    <type>Text</type>
</CustomField>