force-app/main/default/objects/Visa_Insurance_POE__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <referenceTo>customer_POE__c</referenceTo>
    <relationshipLabel>Visa &amp; Insurance</relationshipLabel>
    <relationshipName>Visa_Insurance_POE</relationshipName>
    <type>Lookup</type>
</CustomField>