force-app/main/default/objects/Visa_Insurance_POE__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>