force-app/main/default/objects/Visa_Insurance_POE__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>