force-app/main/default/objects/Visa_Insurance_POE__c/fields/Total_to_TAD__c.field-meta.xml
<CustomField>
    <fullName>Total_to_TAD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Visa Total (TAD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>