force-app/main/default/objects/Visa_Insurance_POE__c/fields/VD_Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>VD_Processing_Fees__c</fullName>
    <formula>Quantity__c *  Visa__r.VD_Processing_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VD Processing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>