force-app/main/default/objects/Visa_Insurance_POE__c/fields/Visa_Reference__c.field-meta.xml
<CustomField>
    <fullName>Visa_Reference__c</fullName>
    <label>Visa Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>