force-app/main/default/objects/Visa_Insurance_POE__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China Single</fullName>
            </value>
            <value>
                <fullName>China Double</fullName>
            </value>
            <value>
                <fullName>China Multi</fullName>
            </value>
            <value>
                <fullName>Trans Siberian 7w</fullName>
            </value>
            <value>
                <fullName>Trans Siberian 4w</fullName>
            </value>
            <value>
                <fullName>SS China Single</fullName>
            </value>
            <value>
                <fullName>SS India Evisa</fullName>
            </value>
            <value>
                <fullName>SS Sri Lanka Eta</fullName>
            </value>
            <value>
                <fullName>China Double Entry</fullName>
                <isActive>false</isActive>
                <label>China Double Entry</label>
            </value>
            <value>
                <fullName>China Single Entry</fullName>
                <isActive>false</isActive>
                <label>China Single Entry</label>
            </value>
            <value>
                <fullName>One way Courier</fullName>
                <isActive>false</isActive>
                <label>One way Courier</label>
            </value>
            <value>
                <fullName>Return Courier</fullName>
                <isActive>false</isActive>
                <label>Return Courier</label>
            </value>
            <value>
                <fullName>Russia</fullName>
                <isActive>false</isActive>
                <label>Russia</label>
            </value>
            <value>
                <fullName>Transsiberia</fullName>
                <isActive>false</isActive>
                <label>Transsiberia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>