force-app/main/default/objects/Visa_Insurance_POE__c/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <label>Insurance</label>
</RecordType>