force-app/main/default/objects/Visa_Insurance_POE__c/recordTypes/Visa.recordType-meta.xml
<RecordType>
    <fullName>Visa</fullName>
    <active>true</active>
    <label>Visa</label>
</RecordType>