force-app/main/default/objects/Visa_Insurance_POE__c/validationRules/PreventEditIfTravelledAndCancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventEditIfTravelledAndCancelled</fullName>
    <active>true</active>
    <description>User cannot edit visa record if Tad Order master status is travelled or cancelled.</description>
    <errorConditionFormula>ISPICKVAL(Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_master_status__c, &apos;Cancelled&apos;) || 
ISPICKVAL(Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_master_status__c, &apos;Travelled&apos;)</errorConditionFormula>
    <errorMessage>You cannot edit visa and Insurance for travelled and cancelled Tad Orders</errorMessage>
</ValidationRule>